tests/semantic/comp_types/comp_types.err
Error: Unable to deduce type for variable x in file comp_types.dl at line 26
relX(x) :- relY(x). // error
-----^-----------------------
Error: Unable to deduce type for variable x in file comp_types.dl at line 26
relX(x) :- relY(x). // error
----------------^------------
Error: Unable to deduce type for variable x in file comp_types.dl at line 27
relX(x) :- relZ(x). // error
-----^-----------------------
Error: Unable to deduce type for variable x in file comp_types.dl at line 27
relX(x) :- relZ(x). // error
----------------^------------
Error: Unable to deduce type for variable x in file comp_types.dl at line 29
relY(x) :- relX(x). // error
-----^-----------------------
Error: Unable to deduce type for variable x in file comp_types.dl at line 29
relY(x) :- relX(x). // error
----------------^------------
Error: Unable to deduce type for variable x in file comp_types.dl at line 31
relY(x) :- relZ(x). // error
-----^-----------------------
Error: Unable to deduce type for variable x in file comp_types.dl at line 31
relY(x) :- relZ(x). // error
----------------^------------
Error: Unable to deduce type for variable x in file comp_types.dl at line 33
relZ(x) :- relX(x). // error
-----^-----------------------
Error: Unable to deduce type for variable x in file comp_types.dl at line 33
relZ(x) :- relX(x). // error
----------------^------------
Error: Unable to deduce type for variable x in file comp_types.dl at line 34
relZ(x) :- relY(x). // error
-----^-----------------------
Error: Unable to deduce type for variable x in file comp_types.dl at line 34
relZ(x) :- relY(x). // error
----------------^------------
12 errors generated, evaluation aborted
