tests/semantic/comp_types/comp_types.dl

// declare a component with an inner type
.comp A<Param> {
	.type inner = [ x : Param ]
	.decl rel ( a : inner )
	rel(["x"]).
}

// instantiate the component several times
.symbol_type type1
.symbol_type type2

.init x = A<type1>
.init y = A<type2>
.init z = A<type1>


// this should be fine
.decl relX( a : x.inner )
.decl relY( a : y.inner )
.decl relZ( a : z.inner )


// all relations should have different types
relX(x) :- relX(x). // no error
relX(x) :- relY(x). // error
relX(x) :- relZ(x). // error

relY(x) :- relX(x). // error
relY(x) :- relY(x). // no error
relY(x) :- relZ(x). // error

relZ(x) :- relX(x). // error
relZ(x) :- relY(x). // error
relZ(x) :- relZ(x). // no error
